[package]
name = "adapter-rustls-canary"
version = "0.0.0"
publish = false
edition = "2024"

[workspace]

[dependencies]
uselesskey-core = { path = "../../crates/uselesskey-core" }
uselesskey-x509 = { path = "../../crates/uselesskey-x509" }
uselesskey-rustls = { path = "../../crates/uselesskey-rustls", features = ["tls-config", "rustls-ring"] }
