[package]
name = "uselesskey-aws-lc-rs"
version = "0.2.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
description = "aws-lc-rs integration for uselesskey test fixtures."
categories = ["development-tools::testing"]
keywords = ["aws-lc-rs", "fixtures", "testing", "crypto"]
readme = "README.md"
authors.workspace = true

[dependencies]
aws-lc-rs = { version = "1", optional = true }

# Key type crates (all optional)
uselesskey-rsa = { path = "../uselesskey-rsa", version = "0.2.0", optional = true }
uselesskey-ecdsa = { path = "../uselesskey-ecdsa", version = "0.2.0", optional = true }
uselesskey-ed25519 = { path = "../uselesskey-ed25519", version = "0.2.0", optional = true }

[features]
default = ["native"]
native = ["dep:aws-lc-rs"]
rsa = ["dep:uselesskey-rsa"]
ecdsa = ["dep:uselesskey-ecdsa"]
ed25519 = ["dep:uselesskey-ed25519"]
all = ["rsa", "ecdsa", "ed25519"]

[dev-dependencies]
uselesskey-core = { path = "../uselesskey-core", version = "0.2.0" }
