[package]
name = "uselesskey-axum"
version = "0.5.1"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
description = "Axum auth test helpers built on uselesskey deterministic fixtures."
categories.workspace = true
keywords = ["axum", "jwt", "jwks", "oidc", "testing"]
readme = "README.md"
exclude = ["fuzz/**", "corpus/**", "**/*.der", "**/*.pem"]
homepage.workspace = true
documentation = "https://docs.rs/uselesskey-axum"
authors.workspace = true

[dependencies]
axum = { version = "0.8.6", default-features = false, features = ["json", "query"] }
http = "1.3.1"
jsonwebtoken.workspace = true
serde.workspace = true
serde_json.workspace = true
tower = { version = "0.5.2", features = ["util"] }
futures-util = "0.3.31"

uselesskey-core = { path = "../uselesskey-core", version = "0.5.1" }
uselesskey-rsa = { path = "../uselesskey-rsa", version = "0.5.1", features = ["jwk"] }
uselesskey-jwk = { path = "../uselesskey-jwk", version = "0.5.1" }
uselesskey-jose-openid = { path = "../uselesskey-jose-openid", version = "0.5.1", features = ["rsa"], default-features = false }

[dev-dependencies]
axum = { version = "0.8.6", default-features = false, features = ["json", "tokio", "query"] }
http-body-util = "0.1.3"
tokio.workspace = true
