[package]
name = "uselesskey-bdd-steps"
version = "0.3.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
authors.workspace = true
publish = true

[dependencies]
cucumber.workspace = true
uselesskey = { path = "../uselesskey", default-features = false, features = [] }
uselesskey-core-id = { workspace = true, optional = true }
uselesskey-core-kid = { workspace = true, optional = true }
uselesskey-core-keypair = { workspace = true, optional = true }
uselesskey-core-negative = { workspace = true, optional = true }
uselesskey-core-sink = { workspace = true, optional = true }
uselesskey-core = { path = "../uselesskey-core" }
uselesskey-jsonwebtoken = { path = "../uselesskey-jsonwebtoken", default-features = false, features = ["all"] }

rsa.workspace = true
jsonwebtoken.workspace = true
ed25519-dalek.workspace = true
p256 = { version = "0.13.2", features = ["ecdsa", "pkcs8", "pem"] }
p384 = { version = "0.13.1", features = ["ecdsa", "pkcs8", "pem"] }
x509-parser = "0.18.1"
serde_json.workspace = true
base64.workspace = true
pgp = { version = "0.19.0", default-features = false }
uselesskey-aws-lc-rs = { path = "../uselesskey-aws-lc-rs", version = "0.3.0", optional = true, default-features = false, features = ["rsa", "ecdsa", "ed25519"] }
uselesskey-ring = { path = "../uselesskey-ring", version = "0.3.0", optional = true, default-features = false, features = ["all"] }
uselesskey-rustcrypto = { path = "../uselesskey-rustcrypto", version = "0.3.0", optional = true, default-features = false, features = ["all"] }
uselesskey-rustls = { path = "../uselesskey-rustls", version = "0.3.0", optional = true, default-features = false, features = ["x509"] }
uselesskey-tonic = { path = "../uselesskey-tonic", version = "0.3.0", optional = true, default-features = false, features = ["x509"] }

[features]
default = ["uk-default"]
uk-default = ["uselesskey/default"]
uk-all = ["uselesskey/full", "uk-rsa", "uk-ecdsa", "uk-ed25519", "uk-hmac", "uk-pgp", "uk-x509", "uk-jwk", "uk-token", "uk-jwt", "uk-core-id", "uk-core-kid", "uk-core-keypair", "uk-core-negative", "uk-core-sink", "uk-aws-lc-rs", "uk-rustls", "uk-tonic", "uk-ring", "uk-rustcrypto"]
uk-core-id = ["dep:uselesskey-core-id"]
uk-core-kid = ["dep:uselesskey-core-kid"]
uk-core-keypair = ["dep:uselesskey-core-keypair"]
uk-core-negative = ["dep:uselesskey-core-negative"]
uk-core-sink = ["dep:uselesskey-core-sink"]
uk-jwt = []
uk-rsa = ["uselesskey/rsa"]
uk-ecdsa = ["uselesskey/ecdsa"]
uk-ed25519 = ["uselesskey/ed25519"]
uk-hmac = ["uselesskey/hmac"]
uk-pgp = ["uselesskey/pgp"]
uk-x509 = ["uselesskey/x509"]
uk-jwk = ["uselesskey/jwk"]
uk-token = ["uselesskey/token"]
uk-aws-lc-rs = ["dep:uselesskey-aws-lc-rs"]
uk-rustls = ["dep:uselesskey-rustls"]
uk-tonic = ["dep:uselesskey-tonic"]
uk-ring = ["dep:uselesskey-ring"]
uk-rustcrypto = ["dep:uselesskey-rustcrypto"]
