[package]
name = "uselesskey-bdd"
version = "0.0.0"
publish = false
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dev-dependencies]
cucumber.workspace = true
tokio.workspace = true
rsa.workspace = true
ed25519-dalek.workspace = true
p256 = { version = "0.13.2", features = ["ecdsa", "pkcs8", "pem"] }
p384 = { version = "0.13.1", features = ["ecdsa", "pkcs8", "pem"] }
x509-parser = "0.18.1"
serde_json.workspace = true
base64.workspace = true
pgp = { version = "0.19.0", default-features = false }
uselesskey = { path = "../uselesskey", default-features = false, features = [] }
uselesskey-core = { path = "../uselesskey-core" }

[features]
default = ["uk-default"]
uk-default = ["uselesskey/default"]
uk-all = ["uselesskey/full", "uk-rsa", "uk-ecdsa", "uk-ed25519", "uk-hmac", "uk-pgp", "uk-x509", "uk-jwk", "uk-token"]
uk-rsa = ["uselesskey/rsa"]
uk-ecdsa = ["uselesskey/ecdsa"]
uk-ed25519 = ["uselesskey/ed25519"]
uk-hmac = ["uselesskey/hmac"]
uk-pgp = ["uselesskey/pgp"]
uk-x509 = ["uselesskey/x509"]
uk-jwk = ["uselesskey/jwk"]
uk-token = ["uselesskey/token"]

[[test]]
name = "bdd"
harness = false
