[package]
name = "uselesskey-bench"
version = "0.0.0"
publish = false
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "Performance harness and budget checks for uselesskey hot fixture paths."
categories.workspace = true
keywords = ["benchmark", "performance", "xtask", "testing", "fixtures"]

[dependencies]
anyhow.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
uselesskey = { path = "../uselesskey", features = ["full"] }

[dev-dependencies]
tempfile.workspace = true
