[package]
name = "uselesskey-bench"
version = "0.0.0"
publish = false
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "Machine-readable performance harness for uselesskey fixture hot paths."

[dependencies]
anyhow.workspace = true
clap.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
uselesskey = { path = "../uselesskey", features = ["full"] }

[dev-dependencies]
serde_json.workspace = true
