[package]
name = "uselesskey-cli"
version = "0.5.1"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
categories.workspace = true
authors.workspace = true
publish = false
description = "Deterministic fixture generation and export helpers for local secret handoff formats."
keywords = ["cli", "fixtures", "export", "testing", "deterministic"]
readme = "README.md"
exclude = ["fuzz/**", "corpus/**", "**/*.der", "**/*.pem"]
documentation = "https://docs.rs/uselesskey-cli"

[[bin]]
name = "uselesskey"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
base64.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
uselesskey = { workspace = true, features = ["full"] }

[dev-dependencies]
assert_cmd = "2.1.1"
insta.workspace = true
predicates = "3.1.3"
serde_json.workspace = true
tempfile.workspace = true

[package.metadata.docs.rs]
all-features = true
