[package]
name = "uselesskey-core-error"
version = "0.3.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
description = "Shared error types for uselesskey core crates."
categories.workspace = true
keywords = ["errors", "fixtures", "testing", "core"]
readme = "README.md"
exclude = ["fuzz/**", "corpus/**", "**/*.der", "**/*.pem"]
homepage.workspace = true
documentation = "https://docs.rs/uselesskey-core-error"
authors.workspace = true

[features]
default = ["std"]
std = ["thiserror/std"]

[dependencies]
thiserror = { version = "2.0.18", default-features = false }

[dev-dependencies]

[package.metadata.docs.rs]
features = ["std"]
