[package]
name = "uselesskey-core-hash"
version = "0.3.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
description = "Length-prefixed hashing helpers shared by deterministic fixture derivation paths."
readme = "README.md"
exclude = ["fuzz/**", "corpus/**", "**/*.der", "**/*.pem"]
categories = ["development-tools::testing"]
keywords = ["hash", "blake3", "fixtures", "testing", "determinism"]
homepage.workspace = true
documentation = "https://docs.rs/uselesskey-core-hash"
authors.workspace = true

[dependencies]
blake3.workspace = true

[dev-dependencies]
proptest.workspace = true

[features]
default = ["std"]
std = ["blake3/std"]

[package.metadata.docs.rs]
features = ["std"]
