[package]
name = "uselesskey-core-id"
version = "0.3.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
description = "Core identity and derivation primitives for uselesskey."
readme = "README.md"
categories = ["development-tools::testing"]
keywords = ["fixtures", "seed", "determinism", "crypto", "testing"]
homepage = "https://github.com/EffortlessMetrics/uselesskey"
documentation = "https://docs.rs/uselesskey-core-id"
authors.workspace = true

[dependencies]
blake3 = { version = "1.8.3", default-features = false }

[dev-dependencies]
proptest.workspace = true
rstest.workspace = true

[features]
default = ["std"]
std = ["blake3/std"]
