[package]
name = "uselesskey-core-id"
version = "0.3.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
description = "Core identity and derivation primitives for uselesskey."
readme = "README.md"
exclude = ["fuzz/**", "corpus/**", "**/*.der", "**/*.pem"]
categories = ["development-tools::testing"]
keywords = ["fixtures", "seed", "determinism", "crypto", "testing"]
homepage = "https://github.com/EffortlessMetrics/uselesskey"
documentation = "https://docs.rs/uselesskey-core-id"
authors.workspace = true

[dependencies]
uselesskey-core-hash = { workspace = true }
uselesskey-core-seed = { path = "../uselesskey-core-seed", version = "0.3.0", default-features = false }

[dev-dependencies]
proptest.workspace = true
rstest.workspace = true

[features]
default = ["std"]
std = ["uselesskey-core-hash/std", "uselesskey-core-seed/std"]

[package.metadata.docs.rs]
features = ["std"]
