[package]
name = "uselesskey-core-jwk-builder"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
description = "JWKS builder with deterministic, stable key ordering."
categories.workspace = true
keywords = ["jwk", "jwks", "fixtures", "testing"]
readme = "README.md"
exclude = ["fuzz/**", "corpus/**", "**/*.der", "**/*.pem"]
homepage.workspace = true
documentation = "https://docs.rs/uselesskey-core-jwk-builder"
authors.workspace = true

[dependencies]
uselesskey-core-jwk-shape = { path = "../uselesskey-core-jwk-shape", version = "0.1.0" }
uselesskey-core-jwks-order = { path = "../uselesskey-core-jwks-order", version = "0.1.0" }
serde_json.workspace = true

[dev-dependencies]
insta.workspace = true
proptest.workspace = true
serde.workspace = true
serde_json.workspace = true

[package.metadata.docs.rs]
all-features = true
