[package]
name = "uselesskey-core-jwk-types"
version = "0.3.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
description = "Core typed JWK and JWKS models used by uselesskey fixture crates."
categories.workspace = true
keywords = ["jwk", "jwks", "fixtures", "testing", "jwt"]
readme = "README.md"
exclude = ["fuzz/**", "corpus/**", "**/*.der", "**/*.pem"]
homepage.workspace = true
documentation = "https://docs.rs/uselesskey-core-jwk-types"
authors.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
proptest.workspace = true

[package.metadata.docs.rs]
all-features = true
