[package]
name = "uselesskey-core-jwk"
version = "0.3.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
description = "Core typed JWK/JWKS models and builder semantics for uselesskey fixture crates."
categories = ["development-tools::testing"]
keywords = ["jwk", "jwks", "jwt", "fixtures", "testing"]
readme = "README.md"
homepage = "https://github.com/EffortlessMetrics/uselesskey"
documentation = "https://docs.rs/uselesskey-core-jwk"
authors.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
proptest.workspace = true
