[package]
name = "uselesskey-core-jwk"
version = "0.3.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
description = "Compatibility façade for typed JWK/JWKS models used by uselesskey fixture crates."
categories.workspace = true
keywords = ["jwk", "jwks", "jwt", "fixtures", "testing"]
readme = "README.md"
exclude = ["fuzz/**", "corpus/**", "**/*.der", "**/*.pem"]
homepage.workspace = true
documentation = "https://docs.rs/uselesskey-core-jwk"
authors.workspace = true

[dependencies]
uselesskey-core-jwk-shape = { path = "../uselesskey-core-jwk-shape", version = "0.3.0" }
uselesskey-core-jwk-builder = { path = "../uselesskey-core-jwk-builder", version = "0.3.0" }

[dev-dependencies]
insta.workspace = true
proptest.workspace = true
serde.workspace = true
serde_json.workspace = true

[package.metadata.docs.rs]
all-features = true
