[package]
name = "uselesskey-core-jwks-order"
version = "0.3.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
description = "Stable kid-based ordering helper for JWKS-like collections."
categories.workspace = true
keywords = ["jwk", "jwks", "fixtures", "testing", "deterministic"]
readme = "README.md"
exclude = ["fuzz/**", "corpus/**", "**/*.der", "**/*.pem"]
homepage.workspace = true
documentation = "https://docs.rs/uselesskey-core-jwks-order"
authors.workspace = true

[dependencies]

[dev-dependencies]
insta.workspace = true
proptest.workspace = true
serde.workspace = true

[package.metadata.docs.rs]
all-features = true
