[package]
name = "uselesskey-core-jwt-shape"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
description = "JWT-shaped token segment generation primitives shared by uselesskey token crates."
categories.workspace = true
keywords = ["jwt", "oauth", "token", "fixtures", "testing"]
readme = "README.md"
exclude = ["fuzz/**", "corpus/**", "**/*.der", "**/*.pem"]
homepage.workspace = true
documentation = "https://docs.rs/uselesskey-core-jwt-shape"
authors.workspace = true

[dependencies]
base64.workspace = true
rand_core.workspace = true
serde_json.workspace = true

[dev-dependencies]
rand_chacha.workspace = true

[package.metadata.docs.rs]
all-features = true
