[package]
name = "uselesskey-core-keypair-material"
version = "0.4.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
description = "PKCS#8/SPKI key-material helpers shared by key fixture crates."
categories.workspace = true
keywords = ["pkcs8", "spki", "fixtures", "testing", "key-material"]
readme = "README.md"
exclude = ["fuzz/**", "corpus/**", "**/*.der", "**/*.pem"]
homepage.workspace = true
documentation = "https://docs.rs/uselesskey-core-keypair-material"
authors.workspace = true

[dependencies]
uselesskey-core = { path = "../uselesskey-core", version = "0.4.0" }
uselesskey-core-kid.workspace = true

[dev-dependencies]
insta.workspace = true
proptest.workspace = true
serde.workspace = true

[package.metadata.docs.rs]
all-features = true
