[package]
name = "uselesskey-core-keypair"
version = "0.3.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
description = "Shared PKCS#8/SPKI key-material helpers for uselesskey fixture crates."
categories = ["development-tools::testing"]
keywords = ["pkcs8", "spki", "fixtures", "testing", "deterministic"]
readme = "README.md"
homepage = "https://github.com/EffortlessMetrics/uselesskey"
documentation = "https://docs.rs/uselesskey-core-keypair"
authors.workspace = true

[dependencies]
uselesskey-core = { path = "../uselesskey-core", version = "0.3.0" }
uselesskey-core-kid = { path = "../uselesskey-core-kid", version = "0.3.0" }
